--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,6 @@ p {
   display: flex;
   align-items: center;
 }
-.cont-text-2 {
-  background-image: url(../assets/desktop/image-hero.jpg);
-}
 
 .text-cont h1 {
   color: var(--White, #fff);
@@ -56,8 +53,18 @@ p {
   padding: 20px 40px;
   position: relative;
   left: -40px;
+  transition: 0.6s;
 }
+.button:hover{
+  background-color: #f7c5a4;
 
+}
+.arrow img{
+  text-align: center;
+  position: relative;
+  top: 9px;
+  right: -9px;
+}
 .arrow {
   width: 40px;
   height: 72px;
@@ -181,3 +188,74 @@ footer{
  transform: scale(1.1);
 
 }
+@media screen and (max-width:860px){
+  .text-cont {
+    background-color: transparent;
+  }
+  .hero{
+    position: relative;
+    right: -20px;
+    top: -1035px;
+    right: 71px;
+    height: 107vh;
+  }
+  .container{
+    display: block;
+    align-items: center;
+  }
+  .main-header{
+    position: relative;
+    top: -1300px;
+    right: -60px;
+  }
+  .main-header p{
+    width: 200px;
+  }
+  .header-cont-1{
+    color: var(--Almost-Black, #151515);
+    font-size: 60px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 60px;
+    text-transform: uppercase;
+    margin-top: 274px;
+    margin-left: -38px;
+  }
+  .text-cont h1{
+    margin-left: 100px;
+    margin-top: 100px;
+
+  }
+  .container-1 {
+    display: grid;
+    
+    grid-template-columns: 1fr;
+  }
+  
+  .pics {
+    display: grid;
+    grid-template-columns: 1fr; 
+  }
+  
+  .picture-container {
+    display: grid;
+    grid-template-rows: 1fr ; 
+  }
+  section{
+    position: relative;
+    top: 300px;
+  }
+  .container-1 {
+    display: grid;
+    grid-template-columns: 350px 635px;
+    justify-content: center;
+    margin-top:-1000px;
+    grid-row-gap: 10px;
+    grid-column-gap: 20px;
+    margin-left: 165px;
+    margin-right: 79px;
+    margin-bottom: 20px;
+}
+}
+
+
