--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@ h1 {
 p {
   font-family: Outfit;
 }
-
 .container {
   display: flex;
   align-items: center;
@@ -55,11 +54,10 @@ p {
   left: -40px;
   transition: 0.6s;
 }
-.button:hover{
+.button:hover {
   background-color: #f7c5a4;
-
 }
-.arrow img{
+.arrow img {
   text-align: center;
   position: relative;
   top: 9px;
@@ -161,57 +159,57 @@ p {
   display: grid;
   grid-template-rows: 445px 445px;
 }
-.footer-cont{
+.footer-cont {
   padding: 30px;
   display: flex;
   justify-content: space-evenly;
   gap: 400px;
 }
-footer{
+footer {
   background-color: #151515;
 }
-.footer-text{
+.footer-text {
   width: 450px;
 }
-.logo{
+.logo {
   width: 60px;
   height: 60px;
 }
-.footer-text{
+.footer-text {
   color: white;
 }
-.icons img{
+.icons img {
   padding: 2px;
   transition: 0.5s;
 }
-.icons img:hover{
- transform: scale(1.1);
-
+.icons img:hover {
+  transform: scale(1.1);
 }
-@media screen and (max-width:860px){
+
+@media screen and (max-width: 860px) {
   .text-cont {
     background-color: transparent;
   }
-  .hero{
+  .hero {
     position: relative;
     right: -20px;
     top: -1035px;
     right: 71px;
     height: 107vh;
   }
-  .container{
+  .container {
     display: block;
     align-items: center;
   }
-  .main-header{
+  .main-header {
     position: relative;
     top: -1300px;
     right: -60px;
   }
-  .main-header p{
+  .main-header p {
     width: 200px;
   }
-  .header-cont-1{
+  .header-cont-1 {
     color: var(--Almost-Black, #151515);
     font-size: 60px;
     font-style: normal;
@@ -221,41 +219,24 @@ footer{
     margin-top: 274px;
     margin-left: -38px;
   }
-  .text-cont h1{
+  .text-cont h1 {
     margin-left: 100px;
     margin-top: 100px;
+  }
 
-  }
-  .container-1 {
-    display: grid;
-    
-    grid-template-columns: 1fr;
-  }
-  
-  .pics {
-    display: grid;
-    grid-template-columns: 1fr; 
-  }
-  
-  .picture-container {
-    display: grid;
-    grid-template-rows: 1fr ; 
-  }
-  section{
+  section .section-1 {
     position: relative;
-    top: 300px;
+    top: 500px;
   }
   .container-1 {
     display: grid;
-    grid-template-columns: 350px 635px;
+    grid-template-columns: 300px;
     justify-content: center;
-    margin-top:-1000px;
+    margin-top: -1000px;
     grid-row-gap: 10px;
     grid-column-gap: 20px;
     margin-left: 165px;
     margin-right: 79px;
     margin-bottom: 20px;
-}
-}
-
-
+  }
+} 
